# MLOps-Basics

./: README.md  pyproject.toml
course_res/: main.py  pyproject.toml
course_res/mynote/: week0.md
course_res/week_0_project_setup/experimental_notebooks/: data_exploration.ipynb
src/data/: datamodule.py
src/data/component/: dataset.py
src/model/: simple_net.py
src/notebooks/: data_analyzer.ipynb
