[project]
name = "mlops-basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "hydra-core>=1.3.2",
    "lightning>=2.6.0",
    "matplotlib>=3.10.7",
    "omegaconf>=2.3.0",
    "pip>=25.3",
    "pyrootutils>=1.0.4",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "wandb>=0.23.1",
]
